# langex

./: .gitignore  README.md  pyproject.toml  rc.sh  repomix-output.xml  requirements.txt
formatter/: discover.py  fmt.py  format_file.py  lint_file.py
formatter/rules/format/: blank_lines.py  declaration_spacing.py  double_blanks.py  eof_newline.py  import_sort.py  indentation.py  leading_blank_lines.py  line_endings.py  trailing_commas.py  trailing_spaces.py
formatter/rules/lint/: line_length.py
langex/: interface.py
langex/core/: __init__.py  callable_meta.py  class_meta.py  meta.py
langex/core/meta/: __init__.py  object_meta.py
langex/meta/: __init__.py  immediate.py  interface.py
langex/typecheck/: __init__.py  enforce.py  hints.py
scripts/: clear_cache.sh  pre-commit.sh  setup.sh
