[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langex"
version = "0.1.6"
description = "Extended Language Support for Python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
authors = [
  { name = "AttAditya" }
]

[project.scripts]
langex = "langex.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["langex*"]